# service_kit

./: .gitignore  CMakeLists.txt  README.md  build_config.cmd  build_config.sh  build_grpc_sample.sh  build_sample.cmd  build_sample.sh  build_service_kit.cmd  build_service_kit.sh  build_third_party.cmd  build_third_party.sh  fetch_third_party.cmd  fetch_third_party.sh
protos/: registry_center.proto
registry_center/: CMakeLists.txt  registry_center.cc
registry_center/include/service_kit/: service_manager_client.h  service_registry_client.h
registry_center/src/: log.cc  log.h  main.cc
registry_center/src/core/: service_manager.cc  service_manager.h
registry_center/src/grpc_impl/: service_manager.cc  service_manager.h  service_registry.cc  service_registry.h
sample/helloworld/: CMakeLists.txt  greeter_client.cc  greeter_server.cc
src/: CMakeLists.txt  common.cmake
src/client_sdk/: CMakeLists.txt  sdk.cc
src/client_sdk/core/: registry_center_client.cc  registry_center_client.h
src/client_sdk/include/: client_sdk.h  service_manager_client.h
src/registry_center/: CMakeLists.txt  main.cc
src/registry_center/core/: service_manager.cc  service_manager.h
src/registry_center/grpc/: registry_center_for_client.cc  registry_center_for_client.h  registry_center_for_server.cc  registry_center_for_server.h
src/registry_center/grpc_impl/: service_manager.cc  service_manager.h  service_registry.h
src/registry_center/protos/: registry_center_for_client.proto  registry_center_for_server.proto
src/server_sdk/: CMakeLists.txt  sdk.cc
src/server_sdk/core/: registry_center_client.cc  registry_center_client.h
src/server_sdk/include/: server_sdk.h  service_registry_client.h
src/utility/: CMakeLists.txt
src/utility/core/: log.cc
src/utility/include/: log.h
src/utility/log/: log.cc
